--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
   - ipython==7.4.0
   - librdkafka==1.2.2
   - jupyter
-  - matplotlib 
+  - matplotlib==3.1.2 
   - marshaltools==0.0.10
   - numpy==1.16.2
   - palpy==1.8.1
